Корректировка стилей на странице карточки товара, кнопки купить, заказа в 1 клик, задать вопрос выстроены в одну линию

--- a/app/Plugin/ModuleAskAProductQuestion/Locale/rus/LC_MESSAGES/module_ask_a_product_question.po
+++ b/app/Plugin/ModuleAskAProductQuestion/Locale/rus/LC_MESSAGES/module_ask_a_product_question.po
@@ -24,6 +24,10 @@ msgid "Ask a product question"
 msgstr "Задать вопрос о товаре"
 
 #: /app_controller.php:183
+msgid "Ask a question"
+msgstr "Задать вопрос"
+
+#: /app_controller.php:183
 msgid "Customer can send question to store admin email about any product in your store from product page."
 msgstr "Покупатель может задать свой вопрос о любом товаре магазина, вопрос будет отправлен на email администратора магазина."
 
