Весь перевод каталога на русский язык вынесен в gettext файл, языковые строки удалены из админки, из базы данных

--- a/app/Locale/rus/LC_MESSAGES/catalog.po
+++ b/app/Locale/rus/LC_MESSAGES/catalog.po
@@ -168,6 +168,9 @@ msgstr "Отзывы"
 msgid "Filter"
 msgstr "Фильтр"
 
+msgid "FreeShipping"
+msgstr "Бесплатная доставка"
+
 msgid "FlatRate"
 msgstr "Курьерская доставка"
 
