--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -158,7 +158,7 @@ msgstr "События"
 
 #: /app_controller.php:230
 msgid "Account"
-msgstr "Администраторы"
+msgstr "Админы"
 
 #: /app_controller.php:232
 msgid "Manage Accounts"
