Добавлен перевод для модуля доставки RussianPostCalc

--- a/app/Locale/rus/LC_MESSAGES/catalog.po
+++ b/app/Locale/rus/LC_MESSAGES/catalog.po
@@ -408,6 +408,9 @@ msgstr "Отзывы"
 msgid "RussianPost"
 msgstr "Почта России"
 
+msgid "RussianPostCalc"
+msgstr "Почта России"
+
 msgid "Sale"
 msgstr "Распродажа"
 
