Добавлен перевод для модуля оплаты PayPal

--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -5165,6 +5165,9 @@ msgstr "Почтовый индекс отправителя"
 msgid "RussianPostCalc"
 msgstr "Почта России"
 
+msgid "Shipping"
+msgstr "Доставка"
+
 msgid "FreeShipping"
 msgstr "Бесплатная доставка"
 
