API ключ для DaData подсказок вынесен в Админку - Настройки - Магазин

--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -1927,6 +1927,10 @@ msgstr "Смена статуса заказа: Имя отправителя"
 msgid "Send contact us emails to"
 msgstr "Получатель писем со страницы обратной связи"
 
+#: /views/configuration/admin_edit.ctp:40
+msgid "DaData API Key"
+msgstr "DaData.Ru API ключ подсказок"
+
 #: /views/contents/admin.ctp:18
 #: /views/contents/admin_core_pages.ctp:16
 #: /views/countries/admin.ctp:20
