Добавлен вывод уведомления после добавления отзыва к товару

--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -1115,6 +1115,10 @@ msgid "Reviews"
 msgstr "Отзывы"
 
 #: /plugins/module_reviews/controllers/setup_controller.php:32
+msgid "Your review has successfully added."
+msgstr "Ваш отзыв успешно добавлен."
+
+#: /plugins/module_reviews/controllers/setup_controller.php:32
 msgid "Rating"
 msgstr "Оценка"
 
