Добавлена распечатка накладной в модуль оплаты Invoice

--- a/app/Locale/rus/LC_MESSAGES/catalog.po
+++ b/app/Locale/rus/LC_MESSAGES/catalog.po
@@ -339,6 +339,9 @@ msgstr "Цена / шт."
 msgid "Print Invoice"
 msgstr "Распечатать счёт"
 
+msgid "Print Packing Slip"
+msgstr "Распечатать накладную"
+
 msgid "Print Order"
 msgstr "Распечатать квитанцию"
 
