Добавлены быстрые ссылки на главную страницу админки

--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -19,6 +19,10 @@ msgstr ""
 msgid "Dashboard"
 msgstr "Панель управления"
 
+#: /app_controller.php:183
+msgid "Quick links"
+msgstr "Быстрые ссылки"
+
 #: /app_controller.php:185
 msgid "Orders"
 msgstr "Заказы"
