Добавлен новый модуль оплаты - Яндекс.Касса для физических лиц

--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -5065,6 +5065,14 @@ msgid "Yandex.Money Wallet"
 msgstr "Оплата из кошелька в Яндекс.Деньгах"
 
 #: /plugins/payment/views/yandex/settings.ctp:22
+msgid "Yandex Wallet"
+msgstr "Номер кошелька в Яндекс.Деньгах"
+
+#: /plugins/payment/views/yandex/settings.ctp:22
+msgid "Yandex Secret Key"
+msgstr "Секретный ключ в Яндекс.Деньгах"
+
+#: /plugins/payment/views/yandex/settings.ctp:22
 msgid "Yandex.Money Credit Card"
 msgstr "Оплата с произвольной банковской карты"
 
