--- a/app/Locale/rus/LC_MESSAGES/catalog.po
+++ b/app/Locale/rus/LC_MESSAGES/catalog.po
@@ -174,6 +174,9 @@ msgstr "Бесплатная доставка"
 msgid "FlatRate"
 msgstr "Курьерская доставка"
 
+msgid "YandexFizlico"
+msgstr "Яндекс.Касса (Яндекс.Деньги, Visa, MasterCard)"
+
 msgid "Forgot your password?"
 msgstr "Забыли пароль?"
 
