Добавлена проверка количества товара на складе при добавлении товара в корзину

--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -5741,3 +5741,5 @@ msgstr "Дополнительная информация о компании."
 msgid "Company VAT."
 msgstr "ИНН компании."
 
+msgid "Maximum product quantity available at our stock: "
+msgstr "Максимально доступное количество товара на нашем складе: "
