--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -1642,6 +1642,10 @@ msgstr "Перезаписывает шаблон модуля по умолча
 msgid "Displays the current page name."
 msgstr "Показывает название текущей страницы."
 
+#: /vendors/smarty/vam_plugins/function.page_name.php:33
+msgid "Displays admin panel."
+msgstr "Показывает админ панель."
+
 #: /vendors/smarty/vam_plugins/function.shopping_cart_total.php:33
 msgid "Displays the total quantity products in shopping cart."
 msgstr "Показывает количество товара в корзине."
