Корректировка перевода в модуле Подарок

--- a/app/Plugin/ModuleGift/Locale/rus/LC_MESSAGES/module_gift.po
+++ b/app/Plugin/ModuleGift/Locale/rus/LC_MESSAGES/module_gift.po
@@ -10,6 +10,9 @@ msgstr "Редактирование подарка"
 msgid  "Manage Gifts"
 msgstr "Настройка подарков"
 
+msgid  "Select Gift"
+msgstr "Выберите подарок"
+
 msgid  "Order Total"
 msgstr "Сумма заказа"
 
