--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -1538,6 +1538,10 @@ msgid "Current product listing sort order. Available values: "
 msgstr "Текущий порядок сортировки товара. Доступные значения: "
 
 #: /vendors/smarty/vam_plugins/function.content_listing.php:183
+msgid "Available values"
+msgstr "Доступные значения"
+
+#: /vendors/smarty/vam_plugins/function.content_listing.php:183
 msgid "Display products with selected product label."
 msgstr "Выводит товары с указанным ярлыком."
 
